# Megrez

./: CMakeLists.txt  LICENSE  README.md  RELEASE.md  TODO.md  autobuild.sh  autogen.sh
benchmark/: autogen.sh  bm_megrez.cc  bm_protobuf.cc
benchmark/IDLs/: benchmark.mgz  benchmark.mgz.h  benchmark.proto
cmake/: CMakeLists.txt  functions.cmake  megrezlite.cmake
compiler/: MegrezC.cc  gen_cpp.cc  gen_text.cc  idl.h  idl_gen_cpp.cc  idl_gen_text.cc  main.cc  parser.cc
doc/Tutorial/: tutorial.md
megrez/: basic.h  builder.h  idl.h  info.h  megrez.h  string.h  struct.h  util.h  utils.h  vector.h
megrez v0.0.7/: basic.h  info.h  stream.cc  stream.h
megrez v0.0.7/cmake/: CMakeLists.txt
megrez v0.0.7/megrez/: format.cc  format.h  info.cc  utils.h
megrez v0.0.7/megrez/lite/: builder.h  liteinfo.h  offset.h  struct.h  vector.h
megrez v0.0.7/relative/: builder.h  offset.h  reinfo.h  string.h  struct.h  vector.h
megrez v0.0.7/test/: format_unittest.cc
megrez v0.0.7/test/testbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  autobuild.sh
megrez v0.0.7/testbuild/: cmake_install.cmake
megrez/compiler/: compiler.cc  parser.cc
megrez/core/: format.cc  format.h  info.cc  info.h  utils.h
megrez/io/: stream.cc  stream.h
megrez/lite/: builder.h  liteinfo.h  offset.h  string.h  struct.h  vector.h
test/: autogen.sh  stream_unittest.cc  test.cc  test.mgz  test.mgz.h
test/testbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
